Add picture element for better contolling of image

--- a/index.html
+++ b/index.html
@@ -88,9 +88,14 @@
                 </span>
             </h1>
             <div class="artist_image">
-                <img src="https://res.cloudinary.com/dvcx5l1vb/image/upload/w_300,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png"
-                    alt="Only Adina at the studio" width="756" height="1008"
-                    srcset="https://res.cloudinary.com/dvcx5l1vb/image/upload/w_300,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 300w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_500,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 500w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_800,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 800w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_1000,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 1000w">
+                <picture>
+                    <source
+                        srcset="https://res.cloudinary.com/dvcx5l1vb/image/upload/f_auto,q_auto/v1690230869/desktop_image_fkh7ep.png"
+                        media="(min-width:1000px)" width="500" height="667">
+                    <img src="https://res.cloudinary.com/dvcx5l1vb/image/upload/w_300,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png"
+                        alt="Only Adina at the studio" width="756" height="1008"
+                        srcset="https://res.cloudinary.com/dvcx5l1vb/image/upload/w_300,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 300w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_500,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 500w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_800,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 800w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_1000,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 1000w">
+                </picture>
             </div>
         </section>
         <section class="music_section" id="music">
