Update file with new code

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <main>
         <section class="hero_section">
             <h1>
-                <span>ONLY ADINA</span>
+                <span>ADINA</span>
                 <span>TO YOUR</span>
                 <span>
                     <span>EARS</span>
@@ -114,9 +114,9 @@
                     <p>Available on all major platforms</p>
                 </div>
                 <div>
-                    <img src="https://res.cloudinary.com/dvcx5l1vb/image/upload/w_300,f_auto,q_auto/v1690026306/an-artiste-recording-a-song-in-style-of-2d-art-Ui8q9WnYsu_1_zw0o0k.png"
-                        alt="New music release artwork cover" width="400" height="400"
-                        srcset="https://res.cloudinary.com/dvcx5l1vb/image/upload/w_300,f_auto,q_auto/v1690026306/an-artiste-recording-a-song-in-style-of-2d-art-Ui8q9WnYsu_1_zw0o0k.png 300w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_500,f_auto,q_auto/v1690026306/an-artiste-recording-a-song-in-style-of-2d-art-Ui8q9WnYsu_1_zw0o0k.png 500w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_800,f_auto,q_auto/v1690026306/an-artiste-recording-a-song-in-style-of-2d-art-Ui8q9WnYsu_1_zw0o0k.png 800w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_1000,f_auto,q_auto/v1690026306/an-artiste-recording-a-song-in-style-of-2d-art-Ui8q9WnYsu_1_zw0o0k.png 1000w">
+                    <img src="https://res.cloudinary.com/dvcx5l1vb/image/upload/w_300,f_auto,q_auto/v1690541318/IMG-20230728-WA0007_h2ukgh.jpg"
+                        alt="New music release artwork cover" width="350" height="350"
+                        srcset="https://res.cloudinary.com/dvcx5l1vb/image/upload/w_300,f_auto,q_auto/v1690541318/IMG-20230728-WA0007_h2ukgh.jpg 300w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_500,f_auto,q_auto/v1690541318/IMG-20230728-WA0007_h2ukgh.jpg 500w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_800,f_auto,q_auto/v1690541318/IMG-20230728-WA0007_h2ukgh.jpg 800w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_1000,f_auto,q_auto/v1690541318/IMG-20230728-WA0007_h2ukgh.jpg 1000w">
                 </div>
             </div>
             <div class="music_platform">
@@ -164,13 +164,14 @@
                 <div>
                     <h2>Who is Adina</h2>
                     <p class="about_content">
-                        An artist that emerged from nkpor.Born Justin Irvin Rivera to a family of Puerto Rican descent,
-                        Brooklyn-native, J.I. got his start freestyling with his brothers at the age of 11. Within a few
-                        years
-                        he
-                        began posting his freestyles on Instagram, and soon caught the attention of legendary
-                        rapper/producer/executive Jermaine Dupri.
+                        Somuadina Innocent professionally known as Adina which was coined
+                        from his name is a fast rising and talented Nigerian Artist and songwriter who blends different
+                        genres in a perfect way. He was born on 10th of april 2005 and has worked with several
+                        artists in the industry, recently he featured on the Trending sound "Forever Topping" with
+                        <b>Iceberry</b> and that has been a massive hit.
                     </p>
+                    <p class="about_content">Adina is a superstar in the making, we hope to see a lot from him with his
+                        massive talent.</p>
                 </div>
             </section>
             <section class="video_section" id="videos">
@@ -180,7 +181,7 @@
                 </div>
             </section>
             <section class="subscribe_section" id="subscribe">
-                <h2>Follow Only Adina </h2>
+                <h2>Follow Adina </h2>
                 <div>
                     <a href="">
                         <img src="./logo/instagram-logo-pink-10674.svg" alt="" width="26" height="26">
