add new div element to music section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
     <link rel="stylesheet" href="style.css">
-    <title>Adina to your ears</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_package_v0.16/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_package_v0.16/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_package_v0.16/favicon-16x16.png">
+    <link rel="manifest" href="./favicon_package_v0.16/site.webmanifest">
+    <link rel="mask-icon" href="./favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <title>Adina official website</title>
 </head>
 
 <body id="home">
@@ -16,8 +23,7 @@
             <div class="header_wrapper">
                 <div class="logo">
                     <a href="#home">
-                        <img src="https://res.cloudinary.com/dvcx5l1vb/image/upload/q_auto/v1690036954/Black_logo_-_no_background_c8rda3.svg"
-                            alt="" width="130" height="130">
+                        <img src="./logo/adina_logo.svg" alt="" width="200" height="200">
                     </a>
                 </div>
                 <button class="menu_btn" aria-live="assertive">Menu</button>
@@ -91,7 +97,7 @@
                 <picture>
                     <source
                         srcset="https://res.cloudinary.com/dvcx5l1vb/image/upload/f_auto,q_auto/v1690230869/desktop_image_fkh7ep.png"
-                        media="(min-width:1000px)" width="500" height="667">
+                        media="(min-width:1000px)" width="500" height="500">
                     <img src="https://res.cloudinary.com/dvcx5l1vb/image/upload/w_300,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png"
                         alt="Only Adina at the studio" width="756" height="1008"
                         srcset="https://res.cloudinary.com/dvcx5l1vb/image/upload/w_300,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 300w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_500,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 500w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_800,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 800w,https://res.cloudinary.com/dvcx5l1vb/image/upload/w_1000,f_auto,q_auto/v1689953961/Untitled_design_zvcfdl.png 1000w">
@@ -102,7 +108,7 @@
             <div>
                 <div>
                     <h2>New Music</h2>
-                    <a href="" class="listen">
+                    <a href="https://fanlink.to/iceberry" class="listen">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="melody" width="22"
                             height="22">
                             <title>music-note</title>
@@ -120,43 +126,49 @@
                 </div>
             </div>
             <div class="music_platform">
-                <ul>
-                    <li>
-                        <a href="" class="audiomack">
-                            <img src="./logo/audiomack-svgrepo-com.svg" alt="Audiomack" width="60" height="60">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="apple_music">
-                            <img src="./logo/apple-music-logo-svgrepo-com.svg" alt="Apple Music" width="60" height="60">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="amazon_music">
-                            <img src="./logo/amazon-music-svgrepo-com.svg" alt="Amazon Music" width="60" height="60">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="boomplay">
-                            <img src="./logo/boomplay-svgrepo-com.svg" alt="Boomplay" width="60" height="60">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="deezer">
-                            <img src="./logo/deezer-logo-svgrepo-com (1).svg" alt="Deezer" width="60" height="60">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="spotify">
-                            <img src="./logo/spotify-logo-fill-svgrepo-com.svg" alt="Spotify" width="60" height="60">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="yt_music">
-                            <img src="./logo/youtube-music-svgrepo-com.svg" alt="Youtube music" width="60" height="60">
-                        </a>
-                    </li>
-                </ul>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="" class="audiomack">
+                                <img src="./logo/audiomack-svgrepo-com.svg" alt="Audiomack" width="60" height="60">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="apple_music">
+                                <img src="./logo/apple-music-logo-svgrepo-com.svg" alt="Apple Music" width="60"
+                                    height="60">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="amazon_music">
+                                <img src="./logo/amazon-music-svgrepo-com.svg" alt="Amazon Music" width="60"
+                                    height="60">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="boomplay">
+                                <img src="./logo/boomplay-svgrepo-com.svg" alt="Boomplay" width="60" height="60">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="deezer">
+                                <img src="./logo/deezer-logo-svgrepo-com (1).svg" alt="Deezer" width="60" height="60">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="spotify">
+                                <img src="./logo/spotify-logo-fill-svgrepo-com.svg" alt="Spotify" width="60"
+                                    height="60">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="yt_music">
+                                <img src="./logo/youtube-music-svgrepo-com.svg" alt="Youtube music" width="60"
+                                    height="60">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
         <div class="dark_bg">
@@ -211,7 +223,7 @@
         </div>
     </main>
     <footer>
-        <p>2023 Only Adina All rights reserved | powered by ES8 Technologies</p>
+        <p>2023 Only Adina All rights reserved | powered by ES7 LABS</p>
     </footer>
     <script src="index.js"></script>
 </body>
